# scamshield_api

./: .gitignore  LICENSE  README.md  example.env  main.py  package-lock.json  pyproject.toml  pyrightconfig.json
app/: config.py  main.py
app/api/: analyze.py
app/models/: request.py  response.py
app/services/: ai.py  audio.py  filter.py  rate_limit.py  risk.py  transcription.py
docs/: .gitignore  astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: quickstart.md
docs/src/content/docs/reference/: audio.md  email.md  error.md  example.md  rate-limit.md  websocket.md
tests/: check_rate_limit_test.py  test_audio.m4a  test_websocket.py
