[project]
name = "scamshield-api"
version = "0.1.0"
description = "An API to detect scams in phone calls, emails and messages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "ffmpeg>=1.4",
    "ffmpeg-python>=0.2.0",
    "filetype>=1.2.0",
    "openai>=2.45.0",
    "openai-whisper>=20250625",
]
